tests/baselines/reference/typeGuardBoolean.errors.txt
tests/cases/conformance/expressions/typeGuards/typeGuardBoolean.ts(5,7): error TS2322: Type 'string | null' is not assignable to type 'null'.
  Type 'string' is not assignable to type 'null'.
tests/cases/conformance/expressions/typeGuards/typeGuardBoolean.ts(8,7): error TS2322: Type 'string | null' is not assignable to type 'string'.
  Type 'null' is not assignable to type 'string'.
tests/cases/conformance/expressions/typeGuards/typeGuardBoolean.ts(11,7): error TS2322: Type 'string | undefined' is not assignable to type 'string'.
  Type 'undefined' is not assignable to type 'string'.


==== tests/cases/conformance/expressions/typeGuards/typeGuardBoolean.ts (3 errors) ====
    function test(strOrNull: string | null, strOrUndefined: string | undefined) {
      var str: string = "original";
      var nil: null;
      if (!Boolean(strOrNull)) {
          nil = strOrNull;
          ~~~
!!! error TS2322: Type 'string | null' is not assignable to type 'null'.
!!! error TS2322:   Type 'string' is not assignable to type 'null'.
      }
      else {
          str = strOrNull;
          ~~~
!!! error TS2322: Type 'string | null' is not assignable to type 'string'.
!!! error TS2322:   Type 'null' is not assignable to type 'string'.
      }
      if (Boolean(strOrUndefined)) {
          str = strOrUndefined;
          ~~~
!!! error TS2322: Type 'string | undefined' is not assignable to type 'string'.
!!! error TS2322:   Type 'undefined' is not assignable to type 'string'.
      }
    }
    